--- a/requirements_checkin.txt
+++ b/requirements_checkin.txt
@@ -4,9 +4,11 @@
 # Image Processing
 Pillow==10.1.0
 
-# HTTP Requests for LINE API
+# HTTP Requests for LINE API and HR System
 requests==2.31.0
 
-# Optional: For MongoDB integration (ถ้าต้องการเชื่อมต่อฐานข้อมูลจริง)
-# pymongo==4.6.0
-# python-dotenv==1.0.0
+# MongoDB integration (ตรวจสอบข้อมูลพนักงาน)
+pymongo==4.6.0
+
+# Environment Variables
+python-dotenv==1.0.0
