Add HR verification with VPN support and environment variables

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,17 @@ MONGO_URI="mongodb+srv://niceppn:XCFyloY5PT1DSfOb@cluster0.ljo0j.mongodb.net/hrm
 # หรือใช้ MongoDB Local
 # MONGO_URI=mongodb://localhost:27017/
 
+# LINE Bot Configuration
+LINE_CHANNEL_ACCESS_TOKEN=your_line_channel_access_token_here
+
+# HR System Integration (Optional)
+# Set to 'true' to enable HR API verification
+ENABLE_HR_VERIFICATION=false
+
+# HR API Configuration (only used if ENABLE_HR_VERIFICATION=true)
+HR_API_URL=http://10.10.110.7:3000/employee/search
+HR_API_TIMEOUT=5
+
 # Flask Configuration
 FLASK_ENV=development
 FLASK_DEBUG=True
